# vggt-slam-ros2

./: .coverage  .coveragerc  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  package.xml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: params.yaml  vggt_slam.rviz
docker/: README.md  cyclonedds.xml  entrypoint.sh
docker/humble/: Dockerfile
docker/jazzy/: Dockerfile
docs/: DEVELOPMENT_PLAN.md  TODO.md  get_tum_dataset.md
launch/: vggt_pointcloud.launch.py  vggt_slam.launch.py
results/: rgbd_dataset_freiburg1_desk_estimated_nolc.txt  rgbd_dataset_freiburg1_desk_estimated_raw.txt  rgbd_dataset_freiburg1_desk_metrics.txt  rgbd_dataset_freiburg1_desk_metrics_nolc.txt
scripts/: demo.sh  eval_all_tum.sh  play_tum_to_ros.py  pointcloud_node  slam_node  test_on_euroc.py  test_on_tum.py
srv/: SaveMap.srv
test/: conftest.py  test_auto_params.py  test_euroc_loader.py  test_geometry.py  test_image_retrieval.py  test_keyframe_selector.py  test_map_manager.py  test_occupancy_grid.py  test_pose_graph.py  test_ros_conversions.py  test_scale_anchor.py  test_sliding_window.py
vggt_slam_ros2/core/: image_retrieval.py  keyframe_selector.py  map_manager.py  pose_graph.py  scale_anchor.py  sliding_window.py  vggt_wrapper.py
vggt_slam_ros2/nodes/: pointcloud_node.py  slam_node.py
vggt_slam_ros2/utils/: auto_params.py  geometry.py  occupancy_grid.py  ros_conversions.py
